--- a/public/admin/admin_master.html
+++ b/public/admin/admin_master.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Admin Master - Icons with Text Underneath</title>
+  <title>Admin Master - Refined Layout</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- FontAwesome and Chart.js -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -17,18 +17,18 @@
     }
     html, body {
       height: 100%;
-      font-family: Arial, sans-serif; 
+      font-family: Arial, sans-serif;
       background: #f0f2f5;
     }
     a {
-      text-decoration: none; 
+      text-decoration: none;
       color: inherit;
     }
 
     /* HEADER (White Theme) */
     .admin-header {
       position: fixed;
-      top: 0; 
+      top: 0;
       left: 0;
       width: 100%;
       background: #fff;
@@ -44,18 +44,18 @@
       font-size: 0.9rem;
     }
     .admin-header .left-section {
-      display: flex; 
+      display: flex;
       align-items: center;
     }
     .hamburger {
-      font-size: 1.5rem; 
-      cursor: pointer; 
-      margin-right: 8px; 
+      font-size: 1.5rem;
+      cursor: pointer;
+      margin-right: 8px;
       color: #333;
     }
     .page-title {
-      font-size: 1.1rem; 
-      font-weight: bold; 
+      font-size: 1.1rem;
+      font-weight: bold;
       color: #333;
     }
     .admin-header .actions button {
@@ -77,8 +77,8 @@
     .sidebar {
       position: fixed;
       top: 50px;
-      left: -240px;
-      width: 240px;
+      left: -200px;  /* Reduced width */
+      width: 200px;  /* Reduced sidebar width */
       height: calc(100% - 50px);
       background: #fff;
       border-right: 1px solid #ddd;
@@ -94,16 +94,17 @@
       list-style: none;
     }
     .sidebar ul li {
-      padding: 10px 15px; 
+      padding: 10px 15px;
       border-bottom: 1px solid #eee;
-      cursor: pointer; 
-      display: flex; 
-      align-items: center; 
+      cursor: pointer;
+      display: flex;
+      align-items: center;
       transition: background 0.3s;
     }
+    /* Increase gap between icon and text */
     .sidebar ul li i {
-      margin-right: 8px; 
-      font-size: 1rem; 
+      margin-right: 10px;
+      font-size: 1rem;
       color: #333;
     }
     .sidebar ul li:hover {
@@ -125,21 +126,21 @@
 
     /* MAIN CONTENT */
     main {
-      padding: 60px 10px 70px;
+      padding: 50px 10px 70px; /* Reduced top padding */
       margin-top: 50px;
       min-height: calc(100vh - 120px);
     }
     .dashboard-header {
-      text-align: center; 
+      text-align: center;
       margin-bottom: 15px;
     }
     .dashboard-header h1 {
-      font-size: 1.8rem; 
-      margin-bottom: 6px; 
+      font-size: 1.8rem;
+      margin-bottom: 6px;
       color: #333;
     }
     .dashboard-header p {
-      font-size: 0.9rem; 
+      font-size: 0.9rem;
       color: #555;
     }
     .card-grid {
@@ -149,9 +150,9 @@
       margin-bottom: 15px;
     }
     .summary-card {
-      border-radius: 6px; 
-      padding: 10px; 
-      text-align: center; 
+      border-radius: 6px;
+      padding: 10px;
+      text-align: center;
       color: #fff;
       box-shadow: 0 3px 6px rgba(0,0,0,0.1);
       transition: transform 0.2s, box-shadow 0.2s;
@@ -166,55 +167,47 @@
     .card-products { background: linear-gradient(135deg, #6f42c1, #a285e6); }
     .card-customers{ background: linear-gradient(135deg, #fd7e14, #ff9f59); }
     .summary-card h3 {
-      margin-bottom: 4px; 
-      font-size: 1rem; 
+      margin-bottom: 4px;
+      font-size: 1rem;
       font-weight: 600;
     }
     .summary-card p {
-      font-size: 1.2rem; 
+      font-size: 1.2rem;
       font-weight: bold;
     }
     .chart-section {
-      background: #fff; 
-      padding: 10px; 
+      background: #fff;
+      padding: 10px;
       border-radius: 6px;
-      box-shadow: 0 3px 6px rgba(0,0,0,0.1); 
+      box-shadow: 0 3px 6px rgba(0,0,0,0.1);
       margin-bottom: 15px;
     }
     .chart-section h2 {
-      font-size: 1rem; 
-      margin-bottom: 8px; 
-      text-align: center; 
+      font-size: 1rem;
+      margin-bottom: 8px;
+      text-align: center;
       color: #333;
     }
-    .chart-container {
-      height: 200px;
-    }
+    .chart-container { height: 200px; }
     .recent-activity {
-      background: #fff; 
-      padding: 10px; 
+      background: #fff;
+      padding: 10px;
       border-radius: 6px;
       box-shadow: 0 3px 6px rgba(0,0,0,0.1);
     }
-    .recent-activity h4 {
-      font-size: 1rem; 
-      margin-bottom: 8px; 
-      color: #333;
-    }
+    .recent-activity h4 { font-size: 1rem; margin-bottom: 8px; color: #333; }
     .activity-item {
-      padding: 6px 0; 
-      border-bottom: 1px solid #eee; 
-      font-size: 0.85rem; 
+      padding: 6px 0;
+      border-bottom: 1px solid #eee;
+      font-size: 0.85rem;
       color: #333;
     }
-    .activity-item:last-child {
-      border-bottom: none;
-    }
+    .activity-item:last-child { border-bottom: none; }
 
-    /* FOOTER (Fixed, White, with Icons + text below, horizontally scrollable, 65px high) */
+    /* FOOTER (Fixed, White, with Icons + text below, horizontally scrollable) */
     .footer-container {
       position: fixed;
-      bottom: 0; 
+      bottom: 0;
       left: 0;
       width: 100%;
       background: #fff;
@@ -222,7 +215,7 @@
       display: flex;
       align-items: center;
       z-index: 1000;
-      height: 65px; /* Enough room for icon + text below */
+      height: 65px;
       padding: 0 5px;
     }
     .scroll-btn {
@@ -243,29 +236,24 @@
       -webkit-overflow-scrolling: touch;
       display: flex;
       align-items: center;
-      justify-content: flex-start;
-      gap: 12px; /* spacing between each link */
+      justify-content: center;
+      gap: 12px;
     }
-    .footer-scroll::-webkit-scrollbar {
-      display: none;
-    }
+    .footer-scroll::-webkit-scrollbar { display: none; }
     .admin-footer a {
       display: inline-flex;
-      flex-direction: column; 
+      flex-direction: column;
       align-items: center;
       justify-content: center;
-      gap: 3px;
+      gap: 2px;
       color: #333;
       text-decoration: none;
-      font-size: 0.7rem; /* text under icons */
+      font-size: 0.7rem;
       padding: 0 10px;
       margin: 0 2px;
-      white-space: nowrap;
       text-align: center;
     }
-    .admin-footer a i {
-      font-size: 1.2rem;
-    }
+    .admin-footer a i { font-size: 1.1rem; }
     .admin-footer a.active {
       font-weight: bold;
       pointer-events: none;
@@ -347,7 +335,7 @@
     </div>
   </main>
 
-  <!-- FOOTER (Icons with text below, horizontally scrollable) -->
+  <!-- FOOTER (Fixed, White, Horizontally Scrollable with Arrows) -->
   <footer class="footer-container">
     <button class="scroll-btn left" id="scrollLeft"><i class="fas fa-angle-double-left"></i></button>
     <div class="footer-scroll" id="footerScroll">
@@ -473,11 +461,7 @@
           scales: {
             y: {
               beginAtZero: true,
-              ticks: { 
-                callback: function(value) { 
-                  return '$' + value; 
-                } 
-              }
+              ticks: { callback: function(value) { return '$' + value; } }
             }
           }
         }
