--- a/public/admin/admin_master.html
+++ b/public/admin/admin_master.html
@@ -2,76 +2,84 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Admin Master - Refined Sidebar & Footer Scrolling</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- FontAwesome and Chart.js -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Admin Master - Mobile Friendly</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   
   <style>
-    /* RESET & BASE */
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    html, body { height: 100%; font-family: Arial, sans-serif; background: #f0f2f5; }
+    /* Base Reset */
+    *, *::before, *::after { margin: 0; padding: 0; box-sizing: border-box; }
+    html, body { height: 100%; font-family: Arial, sans-serif; background: #f9f9f9; }
     a { text-decoration: none; color: inherit; }
 
-    /* HEADER (White Theme) */
+    /* Constants */
+    :root {
+      --header-height: 50px;
+      --footer-height: 60px;
+    }
+
+    /* HEADER */
     .admin-header {
       position: fixed;
-      top: 0; left: 0;
+      top: 0;
+      left: 0;
       width: 100%;
-      background: #fff;
-      color: #333;
+      height: var(--header-height);
+      background: #007bff;
+      color: #fff;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 6px 12px;
-      height: 50px;
+      padding: 0 12px;
       z-index: 1000;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      border-bottom: 1px solid #ddd;
       font-size: 0.9rem;
     }
-    .admin-header .left-section {
-      display: flex; align-items: center;
-    }
-    .hamburger { font-size: 1.5rem; cursor: pointer; margin-right: 8px; color: #333; }
-    .page-title { font-size: 1.1rem; font-weight: bold; color: #333; }
+    .admin-header .hamburger { font-size: 1.5rem; cursor: pointer; }
     .admin-header .actions button {
-      background: #007bff; border: none; padding: 4px 8px; border-radius: 4px;
-      color: #fff; cursor: pointer; margin-left: 8px; transition: background 0.3s;
+      background: #fff;
+      border: none;
+      padding: 4px 8px;
+      border-radius: 4px;
+      color: #007bff;
+      cursor: pointer;
+      margin-left: 8px;
       font-size: 0.85rem;
     }
-    .admin-header .actions button:hover { background: #0056b3; }
 
-    /* SIDEBAR & OVERLAY */
+    /* SIDEBAR */
     .sidebar {
       position: fixed;
-      top: 50px;
-      left: -200px;  /* Reduced width */
-      width: 200px;
-      height: calc(100% - 50px - 65px); /* Stop above footer (footer height = 65px) */
+      top: 0;
+      left: -220px;
+      width: 220px;
+      height: 100vh;
       background: #fff;
       border-right: 1px solid #ddd;
-      padding-top: 10px;
       transition: left 0.3s ease;
       z-index: 1100;
-      font-size: 0.9rem;
+      padding-top: var(--header-height);
     }
     .sidebar.open { left: 0; }
-    .sidebar ul { list-style: none; }
+    .sidebar ul { list-style: none; padding: 0; }
     .sidebar ul li {
-      padding: 10px 15px; border-bottom: 1px solid #eee;
-      cursor: pointer; display: flex; align-items: center; transition: background 0.3s;
+      padding: 12px 16px;
+      border-bottom: 1px solid #eee;
+      display: flex;
+      align-items: center;
+      font-size: 0.9rem;
     }
-    /* Increased gap between icon and text */
-    .sidebar ul li i { margin-right: 12px; font-size: 1rem; color: #333; }
+    .sidebar ul li i { margin-right: 12px; font-size: 1rem; color: #007bff; }
     .sidebar ul li:hover { background: #f7f7f7; }
+
+    /* OVERLAY */
     .overlay {
       position: fixed;
-      top: 50px;
+      top: 0;
       left: 0;
       width: 100%;
-      height: calc(100% - 50px - 65px);
+      height: 100%;
       background: rgba(0,0,0,0.3);
       display: none;
       z-index: 1050;
@@ -81,15 +89,19 @@
     /* MAIN CONTENT */
     main {
       padding: 60px 10px 70px;
-      margin-top: 50px;
-      min-height: calc(100vh - 120px);
+      min-height: calc(100vh - var(--header-height) - var(--footer-height));
     }
-    .dashboard-header { text-align: center; margin-bottom: 15px; }
-    .dashboard-header h1 { font-size: 1.8rem; margin-bottom: 6px; color: #333; }
+    .dashboard-header {
+      text-align: center;
+      margin-bottom: 15px;
+    }
+    .dashboard-header h1 { font-size: 1.6rem; }
     .dashboard-header p { font-size: 0.9rem; color: #555; }
+
+    /* GRID LAYOUT */
     .card-grid {
       display: grid;
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
       gap: 10px;
       margin-bottom: 15px;
     }
@@ -99,120 +111,62 @@
       text-align: center;
       color: #fff;
       box-shadow: 0 3px 6px rgba(0,0,0,0.1);
-      transition: transform 0.2s, box-shadow 0.2s;
       font-size: 0.9rem;
     }
-    .summary-card:hover { transform: translateY(-3px); box-shadow: 0 6px 12px rgba(0,0,0,0.15); }
-    .card-sales    { background: linear-gradient(135deg, #007bff, #00c6ff); }
-    .card-orders   { background: linear-gradient(135deg, #28a745, #85e085); }
-    .card-products { background: linear-gradient(135deg, #6f42c1, #a285e6); }
-    .card-customers{ background: linear-gradient(135deg, #fd7e14, #ff9f59); }
-    .summary-card h3 { margin-bottom: 4px; font-size: 1rem; font-weight: 600; }
-    .summary-card p { font-size: 1.2rem; font-weight: bold; }
-    .chart-section {
-      background: #fff;
-      padding: 10px;
-      border-radius: 6px;
-      box-shadow: 0 3px 6px rgba(0,0,0,0.1);
-      margin-bottom: 15px;
-    }
-    .chart-section h2 { font-size: 1rem; margin-bottom: 8px; text-align: center; color: #333; }
-    .chart-container { height: 200px; }
-    .recent-activity {
-      background: #fff;
-      padding: 10px;
-      border-radius: 6px;
-      box-shadow: 0 3px 6px rgba(0,0,0,0.1);
-    }
-    .recent-activity h4 { font-size: 1rem; margin-bottom: 8px; color: #333; }
-    .activity-item { padding: 6px 0; border-bottom: 1px solid #eee; font-size: 0.85rem; color: #333; }
-    .activity-item:last-child { border-bottom: none; }
+    .card-sales { background: linear-gradient(135deg, #007bff, #00c6ff); }
+    .card-orders { background: linear-gradient(135deg, #28a745, #85e085); }
 
-    /* FOOTER (Fixed, White, Horizontally Scrollable with Arrows) */
+    /* FOOTER */
     .footer-container {
       position: fixed;
-      bottom: 0; 
+      bottom: 0;
       left: 0;
       width: 100%;
       background: #fff;
-      border-top: 1px solid #ddd;
       display: flex;
       align-items: center;
       z-index: 1000;
-      height: 65px;
+      height: var(--footer-height);
       padding: 0 5px;
-    }
-    .scroll-btn {
-      background: #ddd;
-      border: none;
-      color: #333;
-      padding: 4px 6px;
-      font-size: 1rem;
-      cursor: pointer;
-      border-radius: 50%;
-      margin: 0 5px;
-      flex-shrink: 0;
+      box-shadow: 0 -2px 4px rgba(0,0,0,0.1);
     }
     .footer-scroll {
       overflow-x: auto;
       white-space: nowrap;
       flex-grow: 1;
-      -webkit-overflow-scrolling: touch;
       display: flex;
       align-items: center;
-      justify-content: center;
-      gap: 12px;
+      justify-content: space-around;
+      gap: 10px;
     }
     .footer-scroll::-webkit-scrollbar { display: none; }
     .admin-footer a {
-      display: inline-flex;
-      flex-direction: column;  /* Stack icon above text */
+      display: flex;
+      flex-direction: column;
       align-items: center;
-      justify-content: center;
-      gap: 3px;
-      color: #333;
-      text-decoration: none;
       font-size: 0.7rem;
-      padding: 0 10px;
-      margin: 0 2px;
-      text-align: center;
+      color: #007bff;
     }
-    .admin-footer a i { font-size: 1.1rem; }
-    .admin-footer a.active {
-      font-weight: bold;
-      pointer-events: none;
-      opacity: 0.7;
-    }
+    .admin-footer a i { font-size: 1.2rem; }
+    .admin-footer a.active { font-weight: bold; opacity: 0.7; }
   </style>
 </head>
 <body>
   <!-- HEADER -->
   <header class="admin-header">
-    <div class="left-section">
-      <span class="hamburger" id="hamburger"><i class="fas fa-bars"></i></span>
-      <span class="page-title">Admin Master</span>
-    </div>
+    <span class="hamburger" id="hamburger"><i class="fas fa-bars"></i></span>
+    <span class="page-title">Admin</span>
     <div class="actions">
-      <button onclick="goHome()">Home</button>
       <button onclick="logout()">Logout</button>
     </div>
   </header>
-
+  
   <!-- SIDEBAR & OVERLAY -->
   <nav class="sidebar" id="sidebar">
     <ul>
       <li onclick="navigate('admin_dashboard.html')"><i class="fas fa-tachometer-alt"></i> Dashboard</li>
       <li onclick="navigate('home_admin.html')"><i class="fas fa-home"></i> Home</li>
-      <li onclick="navigate('header_admin.html')"><i class="fas fa-columns"></i> Header</li>
       <li onclick="navigate('ecommerce_admin.html')"><i class="fas fa-shopping-bag"></i> Shop</li>
-      <li onclick="navigate('details_admin.html')"><i class="fas fa-info-circle"></i> Details</li>
-      <li onclick="navigate('payments_admin.html')"><i class="fas fa-credit-card"></i> Payments</li>
-      <li onclick="navigate('checkout_admin.html')"><i class="fas fa-shopping-cart"></i> Checkout</li>
-      <li onclick="navigate('delivery_admin.html')"><i class="fas fa-truck"></i> Delivery</li>
-      <li onclick="navigate('support_admin.html')"><i class="fas fa-headset"></i> Support</li>
-      <li onclick="navigate('contact_admin.html')"><i class="fas fa-envelope"></i> Contact</li>
-      <li onclick="navigate('analytics_admin.html')"><i class="fas fa-chart-line"></i> Analytics</li>
-      <li onclick="navigate('about_admin.html')"><i class="fas fa-info"></i> About</li>
     </ul>
   </nav>
   <div class="overlay" id="overlay"></div>
@@ -221,189 +175,34 @@
   <main>
     <div class="dashboard-header">
       <h1>Dashboard</h1>
-      <p>Welcome, Admin. Manage your content and view analytics.</p>
+      <p>Manage your store and analytics.</p>
     </div>
-    <!-- Summary Cards (2×2 grid) -->
     <div class="card-grid">
       <div class="summary-card card-sales">
-        <h3>Total Sales</h3>
+        <h3>Sales</h3>
         <p>$12,345</p>
       </div>
       <div class="summary-card card-orders">
-        <h3>New Orders</h3>
+        <h3>Orders</h3>
         <p>45</p>
       </div>
-      <div class="summary-card card-products">
-        <h3>Products</h3>
-        <p>120</p>
-      </div>
-      <div class="summary-card card-customers">
-        <h3>Customers</h3>
-        <p>78</p>
-      </div>
-    </div>
-    <!-- Chart Section -->
-    <div class="chart-section">
-      <h2>Sales Overview</h2>
-      <div class="chart-container">
-        <canvas id="salesChart"></canvas>
-      </div>
-    </div>
-    <!-- Recent Activity Section -->
-    <div class="recent-activity">
-      <h4>Recent Activity</h4>
-      <div class="activity-item">Order #1024 updated</div>
-      <div class="activity-item">New product added: Smartphone X</div>
-      <div class="activity-item">Homepage banner updated</div>
-      <div class="activity-item">User feedback received</div>
     </div>
   </main>
 
-  <!-- FOOTER (Fixed, White, with Horizontally Scrollable Icons & Text Underneath) -->
+  <!-- FOOTER -->
   <footer class="footer-container">
-    <button class="scroll-btn left" id="scrollLeft"><i class="fas fa-angle-double-left"></i></button>
-    <div class="footer-scroll" id="footerScroll">
-      <div class="admin-footer">
-        <a href="admin_dashboard.html" class="active">
-          <i class="fas fa-tachometer-alt"></i>
-          <span>Dashboard</span>
-        </a>
-      </div>
-      <div class="admin-footer">
-        <a href="home_admin.html">
-          <i class="fas fa-home"></i>
-          <span>Home</span>
-        </a>
-      </div>
-      <div class="admin-footer">
-        <a href="ecommerce_admin.html">
-          <i class="fas fa-shopping-bag"></i>
-          <span>Shop</span>
-        </a>
-      </div>
-      <div class="admin-footer">
-        <a href="details_admin.html">
-          <i class="fas fa-info-circle"></i>
-          <span>Details</span>
-        </a>
-      </div>
-      <div class="admin-footer">
-        <a href="payments_admin.html">
-          <i class="fas fa-credit-card"></i>
-          <span>Payments</span>
-        </a>
-      </div>
-      <div class="admin-footer">
-        <a href="checkout_admin.html">
-          <i class="fas fa-shopping-cart"></i>
-          <span>Checkout</span>
-        </a>
-      </div>
-      <div class="admin-footer">
-        <a href="delivery_admin.html">
-          <i class="fas fa-truck"></i>
-          <span>Delivery</span>
-        </a>
-      </div>
-      <div class="admin-footer">
-        <a href="support_admin.html">
-          <i class="fas fa-headset"></i>
-          <span>Support</span>
-        </a>
-      </div>
-      <div class="admin-footer">
-        <a href="contact_admin.html">
-          <i class="fas fa-envelope"></i>
-          <span>Contact</span>
-        </a>
-      </div>
-      <div class="admin-footer">
-        <a href="analytics_admin.html">
-          <i class="fas fa-chart-line"></i>
-          <span>Analytics</span>
-        </a>
-      </div>
-      <div class="admin-footer">
-        <a href="about_admin.html">
-          <i class="fas fa-info"></i>
-          <span>About</span>
-        </a>
-      </div>
+    <div class="footer-scroll admin-footer">
+      <a href="admin_dashboard.html"><i class="fas fa-home"></i> Home</a>
+      <a href="ecommerce_admin.html"><i class="fas fa-shopping-bag"></i> Shop</a>
+      <a href="payments_admin.html"><i class="fas fa-credit-card"></i> Payments</a>
     </div>
-    <button class="scroll-btn right" id="scrollRight"><i class="fas fa-angle-double-right"></i></button>
   </footer>
 
   <script>
-    // SIDEBAR TOGGLE
-    const hamburger = document.getElementById("hamburger");
-    const sidebar = document.getElementById("sidebar");
-    const overlay = document.getElementById("overlay");
-
-    hamburger.addEventListener("click", () => {
-      sidebar.classList.toggle("open");
-      overlay.classList.toggle("show");
-    });
-    overlay.addEventListener("click", () => {
-      sidebar.classList.remove("open");
-      overlay.classList.remove("show");
-    });
-
-    // NAVIGATION FUNCTIONS (demo alerts; replace with actual navigation)
-    function navigate(page) {
-      alert("Navigate to: " + page);
-      // window.location.href = page;
-    }
-    function goHome() {
-      alert("Going Home...");
-      // window.location.href = "admin_dashboard.html";
-    }
-    function logout() {
-      alert("Logging out...");
-      // window.location.href = "../index.html";
-    }
-
-    // Initialize Chart.js for Sales Overview
-    document.addEventListener("DOMContentLoaded", function() {
-      const ctx = document.getElementById('salesChart').getContext('2d');
-      new Chart(ctx, {
-        type: 'line',
-        data: {
-          labels: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun'],
-          datasets: [{
-            label: 'Monthly Sales',
-            data: [3000, 4500, 4000, 6000, 7000, 6500],
-            backgroundColor: 'rgba(54, 162, 235, 0.2)',
-            borderColor: 'rgba(54, 162, 235, 1)',
-            borderWidth: 2,
-            fill: true,
-            tension: 0.3
-          }]
-        },
-        options: {
-          responsive: true,
-          maintainAspectRatio: false,
-          scales: {
-            y: {
-              beginAtZero: true,
-              ticks: { callback: function(value) { return '$' + value; } }
-            }
-          }
-        }
-      });
-    });
-
-    // FOOTER SCROLLING BUTTONS
-    const footerScroll = document.getElementById("footerScroll");
-    const scrollLeftBtn = document.getElementById("scrollLeft");
-    const scrollRightBtn = document.getElementById("scrollRight");
-
-    scrollLeftBtn.addEventListener("click", () => {
-      footerScroll.scrollBy({ left: -100, behavior: "smooth" });
-    });
-    scrollRightBtn.addEventListener("click", () => {
-      footerScroll.scrollBy({ left: 100, behavior: "smooth" });
-    });
+    document.getElementById("hamburger").onclick = () => {
+      document.getElementById("sidebar").classList.toggle("open");
+      document.getElementById("overlay").classList.toggle("show");
+    };
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
