--- a/public/admin/admin_footer.html
+++ b/public/admin/admin_footer.html
@@ -1,102 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Admin Footer</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- FontAwesome for icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: Arial, sans-serif; }
-    .admin-footer {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      background: #222;
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      padding: 10px 0;
-      color: #fff;
-      z-index: 1000;
-      overflow: visible;
-    }
-    .admin-footer a {
-      text-decoration: none;
-      color: #fff;
-      font-size: 0.95rem;
-      text-align: center;
-      flex: 1;
-      padding: 0 5px;
-      white-space: nowrap;
-    }
-    .admin-footer a i {
-      display: block;
-      font-size: 1.3rem;
-      margin-bottom: 2px;
-    }
-    .more-dropdown {
-      position: relative;
-      flex: 1;
-      text-align: center;
-    }
-    .more-dropdown > a {
-      cursor: pointer;
-      white-space: nowrap;
-    }
-    .more-dropdown-content {
-      position: absolute;
-      bottom: 40px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: #222;
-      border: 1px solid #444;
-      border-radius: 4px;
-      overflow: hidden;
-      display: none;
-      z-index: 1100;
-      min-width: 150px;
-    }
-    .more-dropdown-content a {
-      display: block;
-      color: #fff;
-      padding: 8px 10px;
-      text-decoration: none;
-      font-size: 0.9rem;
-      border-bottom: 1px solid #444;
-      white-space: nowrap;
-    }
-    .more-dropdown-content a:last-child {
-      border-bottom: none;
-    }
-    .more-dropdown-content a:hover {
-      background: #444;
-    }
-    .more-dropdown:hover .more-dropdown-content {
-      display: block;
-    }
-  </style>
-</head>
-<body>
-  <footer class="admin-footer">
-    <a href="admin_dashboard.html"><i class="fas fa-tachometer-alt"></i>Dashboard</a>
-    <a href="home_admin.html"><i class="fas fa-home"></i>Home</a>
-    <a href="ecommerce_admin.html"><i class="fas fa-shopping-bag"></i>Shop</a>
-    <a href="details_admin.html"><i class="fas fa-info-circle"></i>Details</a>
-    <div class="more-dropdown">
-      <a><i class="fas fa-ellipsis-h"></i>More</a>
-      <div class="more-dropdown-content">
-        <a href="payments_admin.html"><i class="fas fa-credit-card"></i> Payments</a>
-        <a href="checkout_admin.html"><i class="fas fa-shopping-cart"></i> Checkout</a>
-        <a href="delivery_admin.html"><i class="fas fa-truck"></i> Delivery</a>
-        <a href="support_admin.html"><i class="fas fa-headset"></i> Support</a>
-        <a href="contact_admin.html"><i class="fas fa-envelope"></i> Contact</a>
-        <a href="analytics_admin.html"><i class="fas fa-chart-line"></i> Analytics</a>
-        <a href="about_admin.html"><i class="fas fa-info"></i> About</a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Admin Footer</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <style>
+      :root {
+        --footer-height: 65px;
+      }
+      .footer-container {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: var(--footer-height);
+        background: #fff;
+        border-top: 1px solid #ddd;
+        display: flex;
+        align-items: center;
+        z-index: 1000;
+        padding: 0 5px;
+      }
+      .scroll-btn {
+        background: #ddd;
+        border: none;
+        color: #333;
+        padding: 4px 6px;
+        font-size: 1rem;
+        cursor: pointer;
+        border-radius: 50%;
+        margin: 0 5px;
+        flex-shrink: 0;
+      }
+      .footer-scroll {
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+        flex-grow: 1;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        gap: 12px;
+      }
+      .footer-scroll::-webkit-scrollbar { display: none; }
+      .admin-footer a {
+        display: inline-flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 3px;
+        color: #333;
+        text-decoration: none;
+        font-size: 0.7rem;
+        padding: 0 10px;
+        margin: 0 2px;
+        text-align: center;
+      }
+      .admin-footer a i { font-size: 1.1rem; }
+      .admin-footer a.active {
+        font-weight: bold;
+        pointer-events: none;
+        opacity: 0.7;
+      }
+    </style>
+  </head>
+  <body>
+    <footer class="footer-container">
+      <button class="scroll-btn left" id="scrollLeft"><i class="fas fa-angle-double-left"></i></button>
+      <div class="footer-scroll admin-footer" id="footerScroll">
+        <a href="admin_dashboard.html" class="active">
+          <i class="fas fa-tachometer-alt"></i>
+          <span>Dashboard</span>
+        </a>
+        <a href="home_admin.html">
+          <i class="fas fa-home"></i>
+          <span>Home</span>
+        </a>
+        <a href="ecommerce_admin.html">
+          <i class="fas fa-shopping-bag"></i>
+          <span>Shop</span>
+        </a>
+        <a href="details_admin.html">
+          <i class="fas fa-info-circle"></i>
+          <span>Details</span>
+        </a>
+        <a href="payments_admin.html">
+          <i class="fas fa-credit-card"></i>
+          <span>Payments</span>
+        </a>
+        <a href="checkout_admin.html">
+          <i class="fas fa-shopping-cart"></i>
+          <span>Checkout</span>
+        </a>
+        <a href="delivery_admin.html">
+          <i class="fas fa-truck"></i>
+          <span>Delivery</span>
+        </a>
+        <a href="support_admin.html">
+          <i class="fas fa-headset"></i>
+          <span>Support</span>
+        </a>
+        <a href="contact_admin.html">
+          <i class="fas fa-envelope"></i>
+          <span>Contact</span>
+        </a>
+        <a href="analytics_admin.html">
+          <i class="fas fa-chart-line"></i>
+          <span>Analytics</span>
+        </a>
+        <a href="about_admin.html">
+          <i class="fas fa-info"></i>
+          <span>About</span>
+        </a>
       </div>
-    </div>
-  </footer>
-</body>
+      <button class="scroll-btn right" id="scrollRight"><i class="fas fa-angle-double-right"></i></button>
+    </footer>
+    <script>
+      // Footer scrolling buttons
+      const footerScroll = document.getElementById("footerScroll");
+      const scrollLeftBtn = document.getElementById("scrollLeft");
+      const scrollRightBtn = document.getElementById("scrollRight");
+      scrollLeftBtn.addEventListener("click", () => {
+        footerScroll.scrollBy({ left: -100, behavior: "smooth" });
+      });
+      scrollRightBtn.addEventListener("click", () => {
+        footerScroll.scrollBy({ left: 100, behavior: "smooth" });
+      });
+    </script>
+  </body>
 </html>
