--- a/public/admin/admin_header.html
+++ b/public/admin/admin_header.html
@@ -1,19 +1,93 @@
-<script>
-  document.addEventListener("DOMContentLoaded", function() {
-    const hamburger = document.getElementById("hamburger");
-    const sidebar = document.getElementById("sidebar");
-    const overlay = document.getElementById("overlay");
-    if (hamburger && sidebar && overlay) {
-      hamburger.addEventListener("click", () => {
-        sidebar.classList.toggle("open");
-        overlay.classList.toggle("show");
-      });
-      overlay.addEventListener("click", () => {
-        sidebar.classList.remove("open");
-        overlay.classList.remove("show");
-      });
-    } else {
-      console.error("Hamburger, sidebar, or overlay element not found.");
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Admin Header</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <style>
+    :root {
+      --header-height: 50px;
     }
-  });
-</script>
+    /* Header Styles */
+    .admin-header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: var(--header-height);
+      background: #fff;
+      color: #333;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 12px;
+      z-index: 1000;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      border-bottom: 1px solid #ddd;
+      font-size: 0.9rem;
+    }
+    .admin-header .left-section {
+      display: flex;
+      align-items: center;
+    }
+    .hamburger {
+      font-size: 1.5rem;
+      cursor: pointer;
+      margin-right: 8px;
+      color: #333;
+    }
+    .page-title {
+      font-size: 1.1rem;
+      font-weight: bold;
+      color: #333;
+    }
+    .admin-header .actions button {
+      background: #007bff;
+      border: none;
+      padding: 4px 8px;
+      border-radius: 4px;
+      color: #fff;
+      cursor: pointer;
+      margin-left: 8px;
+      transition: background 0.3s;
+      font-size: 0.85rem;
+    }
+    .admin-header .actions button:hover {
+      background: #0056b3;
+    }
+  </style>
+</head>
+<body>
+  <header class="admin-header">
+    <div class="left-section">
+      <span class="hamburger" id="hamburger"><i class="fas fa-bars"></i></span>
+      <span class="page-title">Admin Master</span>
+    </div>
+    <div class="actions">
+      <button onclick="logout()">Logout</button>
+    </div>
+  </header>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      const hamburger = document.getElementById("hamburger");
+      // The sidebar and overlay are assumed to be in the parent document.
+      const sidebar = document.getElementById("sidebar");
+      const overlay = document.getElementById("overlay");
+      if (hamburger && sidebar && overlay) {
+        hamburger.addEventListener("click", () => {
+          sidebar.classList.toggle("open");
+          overlay.classList.toggle("show");
+        });
+        overlay.addEventListener("click", () => {
+          sidebar.classList.remove("open");
+          overlay.classList.remove("show");
+        });
+      } else {
+        console.error("Hamburger, sidebar, or overlay element not found.");
+      }
+    });
+  </script>
+</body>
+</html>
